Generate human-readable results via pandas.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -2411,6 +2411,272 @@
    "source": [
     "## Generate human-readable results (take 3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pprint import pprint\n",
+    "import pandas as pd\n",
+    "from IPython.display import Image, display\n",
+    "def display_in_full(df):\n",
+    "    pd.options.display.max_columns = len(df.columns)\n",
+    "    pd.options.display.max_rows = len(df.index)\n",
+    "    display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "object_detection_benchmarks = {\n",
+    "    'rcnn-nas-lowproposals' : {\n",
+    "        \"name\" : \"Faster-RCNN-NAS lowproposals\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_nas_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1200,\n",
+    "        \"height\" : 1200,\n",
+    "    },\n",
+    "    'rcnn-resnet50-lowproposals' : {\n",
+    "        \"name\" : \"Faster-RCNN-ResNet50 lowproposals\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_resnet50_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1024,\n",
+    "        \"height\" : 600,\n",
+    "    },\n",
+    "    'rcnn-resnet101-lowproposals' : {\n",
+    "        \"name\" : \"Faster-RCNN-ResNet101 lowproposals\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_resnet101_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1024,\n",
+    "        \"height\" : 600,\n",
+    "    },\n",
+    "    'rcnn-inception-resnet-v2-lowproposals' : {\n",
+    "        \"name\" : \"Faster-RCNN-Inception-ResNet-v2 lowproposals\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_resnet_v2_atrous_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1024,\n",
+    "        \"height\" : 600,\n",
+    "    },\n",
+    "    'rcnn-inception-v2' : {\n",
+    "        \"name\" : \"Faster-RCNN Inception-v2\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1024,\n",
+    "        \"height\" : 600,\n",
+    "    },\n",
+    "    'ssd-inception-v2' : {\n",
+    "        \"name\" : \"SSD-Inception-v2\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_inception_v2_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 300,\n",
+    "        \"height\" : 300,\n",
+    "    },\n",
+    "    'ssd-mobilenet-v1-quantized-mlperf' : {\n",
+    "        \"name\" : \"MLPerf SSD-MobileNet\",\n",
+    "        \"url\" : \"https://zenodo.org/record/3361502/files/ssd_mobilenet_v1_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 300,\n",
+    "        \"height\" : 300,\n",
+    "        \"provenance\" : \"Google\",\n",
+    "    },\n",
+    "    'ssd-mobilenet-v1-non-quantized-mlperf' : {\n",
+    "        \"name\" : \"MLPerf SSD-MobileNet quantized\",\n",
+    "        \"url\" : \"https://zenodo.org/record/3252084/files/mobilenet_v1_ssd_8bit_finetuned.tar.gz\",\n",
+    "        \"width\" : 300,\n",
+    "        \"height\" : 300,\n",
+    "        \"provenance\" : \"Habana\"\n",
+    "    },\n",
+    "    'ssd-mobilenet-v1-fpn' : {\n",
+    "        \"name\" : \"SSD-MobileNet-v1 FPN SBP\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v1_fpn_shared_box_predictor_640x640_coco14_sync_2018_07_03.tar.gz\",\n",
+    "        \"width\" : 640,\n",
+    "        \"height\" : 640,\n",
+    "    },\n",
+    "    'ssd-resnet50-fpn' : {\n",
+    "        \"name\" : \"SSD-ResNet50-v1 FPN SBP\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_resnet50_v1_fpn_shared_box_predictor_640x640_coco14_sync_2018_07_03.tar.gz\",\n",
+    "        \"width\" : 640,\n",
+    "        \"height\" : 640,\n",
+    "    },\n",
+    "    'ssdlite-mobilenet-v2' : {\n",
+    "        \"name\" : \"SSDLite-MobileNet-v2\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssdlite_mobilenet_v2_coco_2018_05_09.tar.gz\",\n",
+    "        \"width\" : 300,\n",
+    "        \"height\" : 300,\n",
+    "    },\n",
+    "    'yolo-v3' : {\n",
+    "        \"name\" : \"YOLO-v3\",\n",
+    "        \"url\" : \"https://zenodo.org/record/3386327/files/yolo_v3_coco.tar.gz\",\n",
+    "        \"width\" : 416,\n",
+    "        \"height\" : 416,\n",
+    "        \"provenance\" : \"https://github.com/YunYang1994/tensorflow-yolov3/\"\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "division = 'closed'\n",
+    "submitter = 'dividiti'\n",
+    "scenario = 'singlestream'\n",
+    "\n",
+    "path = '/home/anton/projects/mlperf/'\n",
+    "results_dir = os.path.join(path, 'submissions_inference_0_5', division, submitter, 'results')\n",
+    "systems_dir = os.path.join(path, 'submissions_inference_0_5', division, submitter, 'systems')\n",
+    "\n",
+    "results = []\n",
+    "dfs = []\n",
+    "for system in os.listdir(results_dir):\n",
+    "    if system=='compliance_checker_log.txt': continue    \n",
+    "    system_dir = os.path.join(results_dir, system)\n",
+    "    with open(os.path.join(systems_dir, system+'.json')) as system_file:\n",
+    "        system_json = json.load(system_file)\n",
+    "#         pprint(system_json)\n",
+    "    for benchmark in os.listdir(system_dir):\n",
+    "        if benchmark=='compliance_checker_log.txt': continue    \n",
+    "        benchmark_dir = os.path.join(system_dir, benchmark)\n",
+    "        # TODO: Iterate over scenarios.\n",
+    "        scenario = 'singlestream'\n",
+    "        experiment_dir = os.path.join(benchmark_dir, scenario)\n",
+    "        # Extract accuracy in percent.\n",
+    "        accuracy_dir = os.path.join(experiment_dir, 'accuracy')\n",
+    "        with open(os.path.join(accuracy_dir, 'accuracy.txt'), 'r') as accuracy_file:\n",
+    "            accuracy_txt = accuracy_file.readlines()\n",
+    "            accuracy_line = accuracy_txt[-1]\n",
+    "        if accuracy_line.startswith('mAP'):\n",
+    "            task = 'object-detection'\n",
+    "            match = re.match('mAP\\=([\\d\\.]+)\\%', accuracy_line)\n",
+    "            accuracy_pc = float(match.group(1))\n",
+    "        elif accuracy_line.startswith('accuracy'):\n",
+    "            task = 'image-classification'\n",
+    "            match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
+    "            accuracy_pc = float(match.group(1))\n",
+    "        # Extract 90th percentile.\n",
+    "        performance_dir = os.path.join(experiment_dir, 'performance', 'run_1')\n",
+    "        with open(os.path.join(performance_dir, 'mlperf_log_summary.txt'), 'r') as summary_file:\n",
+    "            summary_txt = summary_file.readlines()\n",
+    "            time_ns = int(summary_txt[6].split(':')[1].strip())\n",
+    "            time_ms = time_ns * 1e-6\n",
+    "        benchmark_dict = object_detection_benchmarks.get(benchmark)\n",
+    "        if benchmark_dict:\n",
+    "            width = benchmark_dict['width']\n",
+    "            height = benchmark_dict['height']\n",
+    "        else:\n",
+    "            if benchmark.endswith('96'):\n",
+    "                side = 96\n",
+    "            elif benchmark.endswith('128'):\n",
+    "                side = 128\n",
+    "            elif benchmark.endswith('160'):\n",
+    "                side = 160\n",
+    "            elif benchmark.endswith('192'):\n",
+    "                side = 192\n",
+    "            else:\n",
+    "                side = 224\n",
+    "            width = side\n",
+    "            height = side\n",
+    "\n",
+    "        task_to_str = {\n",
+    "            'image-classification' : 'Image Classification',\n",
+    "            'object-detection' : 'Object Detection',\n",
+    "        }\n",
+    "            \n",
+    "        result = '{},{},{},{},{},'.format(division,task_to_str[task],submitter,system_json['system_name'],benchmark)\n",
+    "        if task=='image-classification':\n",
+    "            result += '{:.01f},,'.format(time_ms)\n",
+    "            result += '{:.03f},,'.format(accuracy_pc)\n",
+    "        elif task=='object-detection':\n",
+    "            result += ',{:.01f},'.format(time_ms)\n",
+    "            result += ',{:.03f},'.format(accuracy_pc)\n",
+    "\n",
+    "        system_list = system.split('-')\n",
+    "        # Processor (CPU).\n",
+    "        hostname_to_processor = {\n",
+    "            'velociti'  : 'Intel Xeon CPU E5-2650 v3',\n",
+    "            'firefly'   : 'Rockchip RK3399',\n",
+    "            'hikey960'  : 'HiSilicon Kirin960',\n",
+    "            'mate10pro' : 'HiSilicon Kirin970',\n",
+    "            'rpi4'      : 'Broadcom BCM2711B0',\n",
+    "        }\n",
+    "        processor = hostname_to_processor[system_list[0]]\n",
+    "        processor_num = system_json['host_processors_per_node']\n",
+    "        # Accelerator.\n",
+    "        accelerator = system_json['accelerator_model_name']\n",
+    "        accelerator_num = system_json['accelerators_per_node']\n",
+    "        # Software (framework).\n",
+    "        software = system_json['framework']\n",
+    "        \n",
+    "        notes = '{} ({}x{})'.format(benchmark, width, height)\n",
+    "\n",
+    "        result += '{},{},{},{},{},{}'.format(processor, processor_num, accelerator, accelerator_num, software, notes)\n",
+    "\n",
+    "        results.append(result)\n",
+    "\n",
+    "        scenario_to_str = {\n",
+    "            'singlestream': 'SingleStream',\n",
+    "            'multistream': 'MultiStream',\n",
+    "            'server': 'Server',\n",
+    "            'offline': 'Offline',\n",
+    "        }\n",
+    "        \n",
+    "        # Visualize.\n",
+    "        data = [\n",
+    "            {\n",
+    "                'Division': division, # TODO: ID.\n",
+    "                'Task': task_to_str[task],\n",
+    "                'Submitter': submitter,\n",
+    "                'System': system_json['system_name'], \n",
+    "                'Benchmark': benchmark,\n",
+    "                'Scenario': scenario_to_str[scenario],\n",
+    "                'IC: Time (ms)': '{:.01f}'.format(time_ms) if task=='image-classification' else '',\n",
+    "                'IC: Accuracy (top1 %)': '{:.03f}'.format(accuracy_pc) if task=='image-classification' else '',\n",
+    "                'OD: Time (ms)': '{:.01f}'.format(time_ms) if task=='object-detection' else '',\n",
+    "                'OD: Accuracy (mAP %)': '{:.03f}'.format(accuracy_pc) if task=='object-detection' else '',\n",
+    "#                 'Processor': processor,\n",
+    "#                 'Processor #': processor_num,\n",
+    "#                 'Accelerator': accelerator,\n",
+    "#                 'Accelerator #': accelerator_num,\n",
+    "#                 'Software': software,\n",
+    "#                 'Notes': notes\n",
+    "            }\n",
+    "            # for (repetition_id, characteristics) in ip(range(num_repetitions), characteristics_list)\n",
+    "        ]\n",
+    "        index = [\n",
+    "            'Division', 'Task', 'Submitter', 'System', 'Benchmark', 'Scenario'\n",
+    "        ]\n",
+    "        # Construct a DataFrame.\n",
+    "        df = pd.DataFrame(data)\n",
+    "        df = df.set_index(index)\n",
+    "        # Append to the list of similarly constructed DataFrames.\n",
+    "        dfs.append(df)\n",
+    "    if dfs:\n",
+    "        # Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
+    "        df = pd.concat(dfs)\n",
+    "        df.sort_index(ascending=True, inplace=True)\n",
+    "\n",
+    "df['ID'] = df.reset_index().index\n",
+    "new_index = ['ID'] + index\n",
+    "df = df.set_index('ID', append=True)\n",
+    "        \n",
+    "# Write CSV.\n",
+    "# with open('dividiti-results.csv', 'w') as results_file:\n",
+    "#     results_file.write('\\n'.join(results))\n",
+    "\n",
+    "# Display DataFrame.\n",
+    "display_in_full(df.unstack(['Task', 'Scenario']))"
+   ]
   }
  ],
  "metadata": {
