Integrate min duration fixes on hikey960.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1680,6 +1680,13 @@
     "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/135\n",
     "]\n",
     "\n",
+    "repos_image_classification_open_audit = [\n",
+    "    'mlperf.open.image-classification.firefly.audit', # https://github.com/mlperf/submissions_inference_0_5/pull/255\n",
+    "    'mlperf.open.image-classification.hikey960.audit', # https://github.com/mlperf/submissions_inference_0_5/pull/257\n",
+    "    'mlperf.open.image-classification.rpi4.audit', # https://github.com/mlperf/submissions_inference_0_5/pull/258\n",
+    "    #'mlperf.open.image-classification.mate10pro.audit',\n",
+    "]\n",
+    "\n",
     "#\n",
     "# Object Detection - Open (TensorFlow Model Zoo + YOLO-v3)\n",
     "#\n",
@@ -1687,17 +1694,6 @@
     "    # velociti\n",
     "    'mlperf.open.object-detection.velociti', # https://www.dropbox.com/s/wiea3a8zf077jsv/mlperf.open.object-detection.velociti.zip\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Already merged.\n",
-    "repos_merged = repos_image_classification_closed + repos_image_classification_open\n",
-    "repos = repos_merged"
    ]
   },
   {
@@ -1751,9 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', submitter='dividiti', path=None, audit=False):\n",
@@ -2167,24 +2161,72 @@
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
     "#             with open(trace_json_path, 'w') as trace_json_file:\n",
     "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)\n",
-    "\n",
-    "    return\n",
-    "\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
     "path = '/home/anton/projects/mlperf/'\n",
-    "submitter = 'dividiti'\n",
-    "\n",
-    "repos = repos_object_detection_open\n",
+    "submitter = 'dividiti'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract submission repos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# repos = repos_image_classification_closed + repos_image_classification_open + repos_object_detection_open\n",
+    "repos = [ 'mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized' ]\n",
     "for repo_uoa in repos:\n",
-    "    check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=False)\n",
-    "\n",
-    "# repos = [\n",
-    "#     # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
-    "#     'mlperf.closed.image-classification.rpi4.audit'\n",
-    "# ]\n",
-    "# for repo_uoa in repos:\n",
-    "#     check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=True)\n",
-    "    \n",
+    "    check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract audit repos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# repos_audit = repos_image_classification_closed_audit + repos_image_classification_open_audit\n",
+    "# for repo_uoa in audit_repos:\n",
+    "#     check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run submission checker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "print(\"*\" * 100)\n",
     "submission_checker_py = os.path.join(upstream_path, 'v0.5', 'tools', 'submission', 'submission-checker.py')\n",
     "# The checker has a weird bug. When submitting to open, 'closed/<organization>/results' must exist on disk.\n",
@@ -2654,7 +2696,7 @@
     "            # for (repetition_id, characteristics) in ip(range(num_repetitions), characteristics_list)\n",
     "        ]\n",
     "        index = [\n",
-    "            'Division', 'Task', 'Submitter', 'System', 'Benchmark', 'Scenario'\n",
+    "            'Division', 'Task', 'Submitter', 'Benchmark', 'System', 'Scenario'\n",
     "        ]\n",
     "        # Construct a DataFrame.\n",
     "        df = pd.DataFrame(data)\n",
