Minor fixes after pushing raw CK data to GitHub.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1055,7 +1055,7 @@
     "$ wget https://www.dropbox.com/s/3md826fk7k1taf3/mlperf.closed.image-classification.firefly.tflite-v1.15.zip\n",
     "$ ck add repo --zip=mlperf.closed.image-classification.firefly.tflite-v1.15.zip\n",
     "\n",
-    "$ https://www.dropbox.com/s/jusoz329mhixpxm/mlperf.closed.image-classification.firefly.armnn-v19.08.neon.zip\n",
+    "$ wget https://www.dropbox.com/s/jusoz329mhixpxm/mlperf.closed.image-classification.firefly.armnn-v19.08.neon.zip\n",
     "$ ck add repo --zip=mlperf.closed.image-classification.firefly.armnn-v19.08.neon.zip\n",
     "\n",
     "$ wget https://www.dropbox.com/s/08lzbz7jl2w5jhu/mlperf.closed.image-classification.firefly.armnn-v19.08.opencl.zip\n",
@@ -1130,7 +1130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NB:** Taccuracy experiment with TFLite for ResNet aborted (estimated to take 17 hours)."
+    "**NB:** We aborted the ResNet accuracy experiment with TFLite, as it was estimated to take 17 hours."
    ]
   },
   {
@@ -1208,8 +1208,6 @@
     "\n",
     "$ wget https://www.dropbox.com/s/hrupp4o4apo3dfa/mlperf.open.image-classification.firefly.armnn-v19.08.neon.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.firefly.armnn-v19.08.neon.zip\n",
-    "\n",
-    "$ wget https://www.dropbox.com/s/zpenduz1i4qt651/mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized.zip\n",
     "```"
    ]
   },
@@ -1577,7 +1575,7 @@
     "        # Table.\n",
     "        \"system\" : system,\n",
     "        \"benchmark\" : benchmark,\n",
-    "        \"query_count\": 50000 if task=='image_classification' else 5000,\n",
+    "        \"query_count\": 50000 if task=='image-classification' else 5000,\n",
     "        \"accuracy_pc\" : \"%.3f\" % accuracy_pc,\n",
     "        # Scenario.\n",
     "        \"scenario_singlestream\": tick(scenario=='singlestream'),\n",
@@ -1981,6 +1979,7 @@
     "        if not os.path.exists(scenario_dir): os.mkdir(scenario_dir)\n",
     "        mode_dir = os.path.join(scenario_dir, mode)\n",
     "        if not os.path.exists(mode_dir): os.mkdir(mode_dir)\n",
+    "        print(mode_dir)\n",
     "        \n",
     "        if audit:\n",
     "            # Deal with a subset of audit tests.\n",
@@ -2188,10 +2187,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# repos = repos_image_classification_closed + repos_image_classification_open + repos_object_detection_open\n",
-    "repos = [ 'mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized' ]\n",
-    "for repo_uoa in repos:\n",
-    "    check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=False)"
+    "# # repos = repos_image_classification_closed + repos_image_classification_open + repos_object_detection_open\n",
+    "# repos = [ 'mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized' ]\n",
+    "# for repo_uoa in repos:\n",
+    "#     check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=False)"
    ]
   },
   {
@@ -2207,7 +2206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# repos_audit = repos_image_classification_closed_audit + repos_image_classification_open_audit\n",
+    "# # audit_repos = repos_image_classification_closed_audit + repos_image_classification_open_audit\n",
+    "# audit_repos = [ 'mlperf.closed.image-classification.mate10pro.audit' ]\n",
     "# for repo_uoa in audit_repos:\n",
     "#     check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=True)"
    ]
